package com.pattern.creational.abstractfactory;

public interface Chair {

    void build();
}
