package com.pattern.creational.abstractfactory;

public interface FurnitureFactory {
    Chair createChair();
    Sofa createSofa();
}
