package com.pattern.creational.abstractfactory;

public interface Sofa {
    void build();
}
